--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body{
 
 .text{
     font-style: italic ;
-    color:white;
+    color:rgb(29, 29, 29);
     font-family: Arial, Helvetica, sans-serif;
 }
 .center {
