--- a/style.css
+++ b/style.css
@@ -21,3 +21,27 @@ body{
     justify-content: center;
     gap: 20px; /* Отступ между картинкой и текстом */
 }
+.button-36 {
+    background-image: linear-gradient(92.88deg, #3B1E54 9.16%, #5b2e83 43.89%, #6f399f 64.72%);
+    border-radius: 8px;
+    border-style: none;
+    box-sizing: border-box;
+    color: #FFFFFF;
+    cursor: pointer;
+    flex-shrink: 0;
+    font-family: "Inter UI","SF Pro Display",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Open Sans","Helvetica Neue",sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+    height: 4rem;
+    padding: 0 1.6rem;
+    text-align: center;
+    text-shadow: rgba(0, 0, 0, 0.25) 0 3px 8px;
+    transition: all .5s;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    display:block;
+    margin: auto;
+    margin-bottom: 10px;
+  }
+  
